z-index fix for userlist

--- a/Discord Clone/style.css
+++ b/Discord Clone/style.css
@@ -18,7 +18,7 @@
     height: 100%;
     width: 80%;
     position: relative;
-    font-size: 2vh;
+    font-size: 2.3vh;
 }
 
 .main-container {
@@ -87,19 +87,21 @@
     width: 80vw;
     height: 7vh;
     background: #d3d3d3;
-    z-index: -1;
+    z-index: 2;
     top: 0;
     right: 0;
 }
 
 .userList {
+    display: inline-block;
+    overflow-y: scroll;
     position: absolute;
     top: 0;
     right: 0;
     width: 16vw;
     height: 100%;
     background: #c1c1c1;
-    z-index: -2;
+    z-index: 2;
 }
 
 body {
@@ -114,6 +116,8 @@ body {
 }
 
 .side-content {
+    z-index: 3;
+    position: relative;
     float: right;
     height: 100%;
     width: 16vw;
